--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,21 @@ authors = ["Maximilian Sander <maximilian_sander@mailbox.org>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+mpi4py = "^3.1.4"
+python = ">=3.10,<3.11"
+cleverdict = { git = "https://github.com/PFython/cleverdict.git", branch = "master" }
+numpy = "^1.26.0"
+pytorch-triton-rocm = { url = "https://download.pytorch.org/whl/nightly/pytorch_triton_rocm-2.1.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
+torch = { url = "https://download.pytorch.org/whl/nightly/rocm5.6/torch-2.1.0.dev20230903%2Brocm5.6-cp310-cp310-linux_x86_64.whl" }
+backpack-for-pytorch = "^1.6.0"
+pytest-timeout = "^2.1.0"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.2"
+pytest-cov = "^4.1.0"
+mypy = "^1.5.1"
+ruff = "^0.0.291"
+black = {extras = ["jupyter"], version = "^23.9.1"}
 
 [build-system]
 requires = ["poetry-core"]
