--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,50 +1,118 @@
-# This file is a template, and might need editing before it works on your project.
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Python.gitlab-ci.yml
+image: python:3.10
 
-# Official language image. Look for the different tagged releases at:
-# https://hub.docker.com/r/library/python/tags/
-image: python:latest
+stages:
+  - lint
+  - test
 
-# Change pip's cache directory to be inside the project directory since we can
-# only cache local items.
 variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+  POETRY_HOME: "$CI_PROJECT_DIR/.poetry"
+  POETRY_CACHE_DIR: "$CI_PROJECT_DIR/.poetry/cache"
+  POETRY_VIRTUALENVS_IN_PROJECT: 'true'
+  POETRY_VIRTUALENVS_OPTIONS_ALWAYS_COPY: 'true'
+  CACHE_COMPRESSION_LEVEL: 'fast'
+  FF_USE_FASTZIP: 'true'
 
-# Pip's cache doesn't store the python packages
-# https://pip.pypa.io/en/stable/topics/caching/
-#
-# If you want to also cache the installed packages, you have to install
-# them in a virtualenv and cache it as well.
 cache:
+  key: python-$CI_COMMIT_REF_SLUG
   paths:
-    - .cache/pip
-    - venv/
+    - ".cache/"
+    - ".poetry/"
+    - ".venv/"
+
 
 before_script:
-  - python --version ; pip --version  # For debugging
-  - pip install virtualenv
-  - virtualenv venv
-  - source venv/bin/activate
-  - pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+  - echo "Installing Poetry..."
+  - echo 'export PATH="$PATH:/root/.local/bin"' >> ~/.bashrc && source ~/.bashrc
+  - echo  "CI_BUILDS_DIR:" "$CI_BUILDS_DIR"
+  - echo  "CI_PROJECT_DIR:" "$CI_PROJECT_DIR"
+  - pwd
+  - pip install --user --upgrade pipx
+  - pipx ensurepath
+  - pipx install poetry
+#  - poetry install -vvv --with dev --no-root
+  - poetry install -vvv --with dev
+  - pip --version
+  - source $(poetry env info --path)/bin/activate
+  - python --version; echo "pipx $(pipx --version)"; poetry --version
+  - echo "CI_COMMIT_REF_SLUG:" "$CI_COMMIT_REF_SLUG"
+  - echo "CI_COMMIT_BRANCH:" "$CI_COMMIT_BRANCH"
 
-test_pytest:
+pytest:
   stage: test
   script:
-    - pip install pytest
-    - pytest .
-
+    - apt-get update && apt-get install -y libgraphviz-dev && apt-get clean
+    - pytest --cov --cov-report term --cov-report xml:coverage.xml tests/
+  allow_failure: false
+  coverage: "/(?i)total.*? (100(?:\\.0+)?\\%|[1-9]?\\d(?:\\.\\d+)?\\%)$/"
+  cache:
+    key: python-$CI_COMMIT_REF_SLUG
+    paths:
+      - ".cache/"
+      - ".poetry/"
+      - ".venv/"
+      - ".pytest_cache/"
+  artifacts:
+    reports:
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage.xml
   tags:
     - dissertation_runner
+  interruptible: true
 
-test_mypy:
+mypy:
   stage: test
   script:
-      - pip install mypy
-      - mypy .
-
+    - mypy .
+  allow_failure: false
+  cache:
+    key: python-$CI_COMMIT_REF_SLUG
+    paths:
+      - ".cache/"
+      - ".poetry/"
+      - ".venv/"
+      - ".mypy_cache/"
   tags:
-      - dissertation_runner
+    - dissertation_runner
+  interruptible: true
 
+ruff:
+  stage: lint
+  script:
+    - ruff check .
+  allow_failure: false
+  cache:
+    key: python-$CI_COMMIT_REF_SLUG
+    paths:
+      - ".cache/"
+      - ".poetry/"
+      - ".venv/"
+  tags:
+    - dissertation_runner
+  interruptible: true
+
+black:
+  stage: lint
+  script:
+    - black --check --diff .
+    - |
+      (black --check . 2>&1) > black_check_output.txt
+      echo 'Metrics:'
+      unchanged_files=$(grep -oE '[0-9]+ file[s]? would be left unchanged.' < black_check_output.txt | grep -oE '[0-9]+' || echo "0")
+      echo "Black_Unchanged_Files $unchanged_files" > metrics.txt
+      echo "Black_Unchanged_Files $unchanged_files"
+      reformatted_files=$(grep -oE '[0-9]+ file[s]? would be reformatted.' < black_check_output.txt | grep -oE '[0-9]+' || echo "0")
+      echo "Black_Reformatted_Files $reformatted_files" >> metrics.txt
+      echo "Black_Reformatted_Files $reformatted_files"
+
+  allow_failure: false
+  tags:
+    - dissertation_runner
+  cache:
+    key: python-$CI_COMMIT_REF_SLUG
+    paths:
+      - ".cache/"
+      - ".poetry/"
+      - ".venv/"
+  interruptible: true
