--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,16 @@ pytorch-triton-rocm = { url = "https://download.pytorch.org/whl/nightly/pytorch_
 torch = { url = "https://download.pytorch.org/whl/nightly/rocm5.6/torch-2.1.0.dev20230903%2Brocm5.6-cp310-cp310-linux_x86_64.whl" }
 backpack-for-pytorch = "^1.6.0"
 pytest-timeout = "^2.1.0"
+ruff = "^0.1.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
 pytest-cov = "^4.1.0"
 mypy = "^1.5.1"
-ruff = "^0.0.291"
-black = {extras = ["jupyter"], version = "^23.9.1"}
+
+[tool.ruff]
+# Set the maximum line length to 119.
+line-length = 119
 
 [build-system]
 requires = ["poetry-core"]
