--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ mpi4py = "^3.1.4"
 python = ">=3.10,<3.11"
 cleverdict = { git = "https://github.com/PFython/cleverdict.git", branch = "master" }
 numpy = "^1.26.0"
-pytorch-triton-rocm = { url = "https://download.pytorch.org/whl/nightly/pytorch_triton_rocm-2.1.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
-torch = { url = "https://download.pytorch.org/whl/nightly/rocm5.6/torch-2.1.0.dev20230903%2Brocm5.6-cp310-cp310-linux_x86_64.whl" }
+pytorch-triton-rocm = { url = "https://download.pytorch.org/whl/pytorch_triton_rocm-2.1.0-cp310-cp310-linux_x86_64.whl#sha256=12fbf2ded4e5efcab0ff9ecc2de17f667dc4ef0a8a952ab9b549344ca4feb19e" }
+torch = { url = "https://download.pytorch.org/whl/rocm5.6/torch-2.1.0%2Brocm5.6-cp310-cp310-linux_x86_64.whl" }
 backpack-for-pytorch = "^1.6.0"
 pytest-timeout = "^2.1.0"
 ruff = "^0.1.6"
